Fixing width issue on mobile. Resolution found. Still missing to update views.

--- a/MobileApplication/assets/styles/base.less
+++ b/MobileApplication/assets/styles/base.less
@@ -648,7 +648,7 @@ body {
         p {
             padding: 0;
             margin: 0 auto 15px;
-            width: 88%;
+            width: 93%;
             color: @clr-white;
             font-size: 20px;
             font-weight: 300;
